cmake/modules/UsePythonTest.cmake, text/CMakeLists.txt: Only use python tests when python is found.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4213 71e0b675-c112-0410-beda-96664073b5c2

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -152,16 +152,18 @@ install(TARGETS roundtrip
 # calling from Python.
 if(NOT MINGW AND NOT CYGWIN)
   include(UsePythonTest)
-  set(pytests
-      babel sym fastsearch unique kekule)
-  foreach(pytest ${pytests})
-    ADD_PYTHON_TEST(pytest_${pytest} test${pytest}.py)
-    set_tests_properties(pytest_${pytest} PROPERTIES
-         FAIL_REGULAR_EXPRESSION "ERROR;FAIL;Test failed"
-         ENVIRONMENT "BABEL_LIBDIR=${CMAKE_BINARY_DIR}/lib"
-         ENVIRONMENT "BABEL_DATADIR=${CMAKE_SOURCE_DIR}/data"
-    )
-  endforeach(pytest ${pytests})
+  if(PYTHON_EXECUTABLE)
+    set(pytests
+        babel sym fastsearch unique kekule)
+    foreach(pytest ${pytests})
+      ADD_PYTHON_TEST(pytest_${pytest} test${pytest}.py)
+      set_tests_properties(pytest_${pytest} PROPERTIES
+           FAIL_REGULAR_EXPRESSION "ERROR;FAIL;Test failed"
+           ENVIRONMENT "BABEL_LIBDIR=${CMAKE_BINARY_DIR}/lib"
+           ENVIRONMENT "BABEL_DATADIR=${CMAKE_SOURCE_DIR}/data"
+      )
+    endforeach(pytest ${pytests})
+  endif(PYTHON_EXECUTABLE)
 endif(NOT MINGW AND NOT CYGWIN)
 
 ###############################
