src/CMakeLists.txt, tools/CMakeLists.txt: Improve static building support.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4216 71e0b675-c112-0410-beda-96664073b5c2

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -184,10 +184,15 @@ if(WIN32)
   set(libs ${libs} ${ZLIB_LIBRARY})
 else(WIN32)
   # the C math library
-  find_library(MATH_LIBRARY NAMES m)
-  if(MATH_LIBRARY)
-    set(libs ${libs} ${MATH_LIBRARY})
-  endif(MATH_LIBRARY)
+  if(BUILD_MIXED)
+    set(libs ${libs} m)
+  else(BUILD_MIXED)
+    # Make sure to find the static library with .a suffix (see CMAKE_FIND_LIBRARY_SUFFIXES)
+    find_library(MATH_LIBRARY NAMES m)
+    if(MATH_LIBRARY)
+      set(libs ${libs} ${MATH_LIBRARY})
+    endif(MATH_LIBRARY)
+  endif(BUILD_MIXED)
 
   if(BUILD_SHARED)
     # dl library if it is found and we are doing a shared build
