--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -253,6 +253,8 @@ else(BUILD_SHARED)
       QTPIECharges
      )
 
+  # Set libs to imported openbabel target
+  set(libs openbabel ${LIBXML2_LIBRARIES})
 
   if(MSVC)
     #
@@ -272,19 +274,39 @@ else(BUILD_SHARED)
     endforeach(plugin_classes ${format_classes} ${descriptor_classes} ${fingerprint_classes} ${forcefield_classes} ${op_classes} ${charge_classes})
     set(CMAKE_CXX_FLAGS "${plugin_symbols_link_flags} ${CMAKE_CXX_FLAGS}")
 
-    if (BUILD_MIXED)
-      #
-      # Relocatable binaries on linux using -static-libgcc. (GCC only)
-      #
-      set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static-libgcc")
-      # make sure the linker will find the static libstdc++
-      file(REMOVE "${CMAKE_BINARY_DIR}/libstdc++.a")
-      execute_process(COMMAND "g++" "-print-file-name=libstdc++.a"
-                      OUTPUT_VARIABLE libstdcpp
-                      OUTPUT_STRIP_TRAILING_WHITESPACE)
-      execute_process(COMMAND "ln" "-s" "${libstdcpp}"
-                      WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
-      link_directories(${CMAKE_BINARY_DIR})
+    find_package(Threads)
+    if(CMAKE_USE_PTHREADS_INIT)
+      if(BUILD_MIXED)
+        set(libs ${libs} ${CMAKE_THREAD_LIBS_INIT})
+      else()
+        # Make sure to find the static library with .a suffix (see CMAKE_FIND_LIBRARY_SUFFIXES)
+        find_library(PTHREAD_LIBRARY NAMES pthread)
+        if(PTHREAD_LIBRARY)
+          set(libs ${libs} ${PTHREAD_LIBRARY})
+        endif()
+      endif()
+    endif()
+
+    if(BUILD_MIXED)
+      if(CMAKE_COMPILER_IS_GNUCXX)
+        if(CMAKE_SYSTEM_NAME MATCHES Linux)
+
+          #
+          # Relocatable binaries on linux using -static-libgcc. (GCC only)
+          #
+          set(CMAKE_CXX_FLAGS "-static-libgcc ${CMAKE_CXX_FLAGS}")
+          # make sure the linker will find the static libstdc++
+          file(REMOVE "${CMAKE_BINARY_DIR}/libstdc++.a")
+          execute_process(COMMAND "g++" "-print-file-name=libstdc++.a"
+                          OUTPUT_VARIABLE libstdcpp
+                          OUTPUT_STRIP_TRAILING_WHITESPACE)
+          execute_process(COMMAND "ln" "-s" "${libstdcpp}"
+                          WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
+
+          link_directories(${CMAKE_BINARY_DIR})
+
+        endif(CMAKE_SYSTEM_NAME MATCHES Linux)
+      endif(CMAKE_COMPILER_IS_GNUCXX)
     else(BUILD_MIXED)
       #
       # Default static build using GNU-like compiler.
@@ -295,10 +317,14 @@ else(BUILD_SHARED)
 
   # build a static babel only
   add_executable(babel babel.cpp)
-  target_link_libraries(babel openbabel ${LIBXML2_LIBRARIES})
-  # Prevent -Wl,-Bdynamic from being added to the end of the link line.
-  set_target_properties(babel PROPERTIES
-                        LINK_SEARCH_END_STATIC TRUE)
+  target_link_libraries(babel ${libs})
+
+  if(NOT BUILD_MIXED)
+    # Prevent -Wl,-Bdynamic from being added to the end of the link line.
+    set_target_properties(babel PROPERTIES
+                          LINK_SEARCH_END_STATIC TRUE)
+  endif(NOT BUILD_MIXED)
+
   install(TARGETS babel
           RUNTIME DESTINATION bin
           LIBRARY DESTINATION lib
