Add support for reading CASTEP output.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4223 71e0b675-c112-0410-beda-96664073b5c2

--- a/src/formats/CMakeLists.txt
+++ b/src/formats/CMakeLists.txt
@@ -18,6 +18,7 @@ set(formats_utility
   )
 set(formats_compchem
       adfformat
+      castepformat
       dmolformat
       fchkformat
       fhiaimsformat
