Include InChI format for static builds.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4237 71e0b675-c112-0410-beda-96664073b5c2

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -169,6 +169,9 @@ else(BUILD_SHARED)
   foreach(plugingroup descriptors fingerprints forcefields ops charges)
     set(openbabel_srcs ${openbabel_srcs} ${${plugingroup}})
   endforeach(plugingroup descriptors fingerprints forcefields ops charges)
+
+  set(openbabel_srcs ${openbabel_srcs} formats/getinchi.cpp ops/unique.cpp)
+  add_subdirectory(formats/inchi103)
 endif(BUILD_SHARED)
 
 set(openbabel_library_srcs
