Changes for static build: The plugin instances are now part of the API which keeps them from being removed at link time. (The changes only affect static builds)
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4239 71e0b675-c112-0410-beda-96664073b5c2

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -170,8 +170,9 @@ else(BUILD_SHARED)
     set(openbabel_srcs ${openbabel_srcs} ${${plugingroup}})
   endforeach(plugingroup descriptors fingerprints forcefields ops charges)
 
-  set(openbabel_srcs ${openbabel_srcs} formats/getinchi.cpp ops/unique.cpp)
   add_subdirectory(formats/inchi103)
+  set(openbabel_srcs ${openbabel_srcs} formats/getinchi.cpp ops/unique.cpp)
+  set(libs ${libs} inchi)
 endif(BUILD_SHARED)
 
 set(openbabel_library_srcs
