--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -40,9 +40,19 @@ endif (EIGEN2_FOUND)
 
 set(TEST_PATH ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
 
+if(NOT BUILD_SHARED)
+  set(libs openbabel ${LIBXML2_LIBRARIES} inchi)
+  set(CMAKE_CXX_FLAGS "-static ${CMAKE_CXX_FLAGS}")
+else()
+  set(libs openbabel)
+endif()
+
 foreach(test ${tests})
   add_executable(test_${test} ${test}test.cpp)
-  target_link_libraries(test_${test} ${BABEL_LIBRARY})
+  target_link_libraries(test_${test} ${libs})
+  if(NOT BUILD_SHARED)
+    set_target_properties(test_${test} PROPERTIES LINK_SEARCH_END_STATIC TRUE)
+  endif()
   add_test(${test}_Test ${TEST_PATH}/test_${test})
   set_tests_properties(${test}_Test PROPERTIES
     FAIL_REGULAR_EXPRESSION "ERROR;FAIL;Test failed"
@@ -91,7 +101,10 @@ endif(LIBXML2_FOUND)
 
 if(WITH_INCHI)
   add_executable(test_inchiwrite inchiwrite.cpp ../src/formats/getinchi.cpp)
-  target_link_libraries(test_inchiwrite ${BABEL_LIBRARY})
+  target_link_libraries(test_inchiwrite ${libs})
+  if(NOT BUILD_SHARED)
+    set_target_properties(test_inchiwrite PROPERTIES LINK_SEARCH_END_STATIC TRUE)
+  endif()
   # files in test/inchi -- both .sdf and .txt
   set(inchitests Samples SamplesTechMan)
   set(inchidata ${CMAKE_SOURCE_DIR}/test/inchi)
@@ -108,7 +121,10 @@ endif(WITH_INCHI)
 
 foreach(test ${old_tests})
   add_executable(test_${test} ${test}.cpp)
-  target_link_libraries(test_${test} ${BABEL_LIBRARY})
+  target_link_libraries(test_${test} ${libs})
+  if(NOT BUILD_SHARED)
+    set_target_properties(test_${test} PROPERTIES LINK_SEARCH_END_STATIC TRUE)
+  endif()
   add_test(${test}_Test ${TEST_PATH}/test_${test})
   set_tests_properties(${test}_Test PROPERTIES
     FAIL_REGULAR_EXPRESSION "not ok"
@@ -122,7 +138,10 @@ endforeach(test ${old_tests})
 ############################################################  
 
 add_executable(roundtrip roundtrip.cpp)
-target_link_libraries(roundtrip ${BABEL_LIBRARY})
+target_link_libraries(roundtrip ${libs})
+if(NOT BUILD_SHARED)
+  set_target_properties(roundtrip PROPERTIES LINK_SEARCH_END_STATIC TRUE)
+endif()
 install(TARGETS roundtrip
                 RUNTIME DESTINATION bin
                 LIBRARY DESTINATION lib
