Cleanup after static build changes + update static_executable example.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4240 71e0b675-c112-0410-beda-96664073b5c2

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -67,215 +67,12 @@ else(BUILD_SHARED)
 #
 # Build STATIC babel with all plugins taken from the static libopenbabel.a
 #
-# To ensure the plugins are not removed from the final executable, the relevant
-# plugin class (the classes inheriting OBPlugin) symbols have to be undefined
-# while linking to ensure the symbols are taken from the static libopenabbel.a.
-#
-# GNU GCC & Intel ICC
-#
-# name mangling: _ZTVN9OpenBabel${length}${plugin_class}E
-# undefine symbol compiler option: -u symbol
-#
-# MSVC:
-#
-# name mangling: FIXME (not the same as gcc,icc)
-# undefine symbol compiler option: /U symbol
-#
 ###############################################################################
-
-  # These are the class names for the formats.
-  set(format_classes
-      ACRFormat
-      ADFOutputFormat
-      ADFInputFormat
-      OBT41Format
-      AlchemyFormat
-      AmberPrepFormat
-      OBAPIInterface
-      BallStickFormat
-      BGFFormat
-      BoxFormat
-      CacaoFormat
-      CacheFormat
-      CARFormat
-      CCCFormat
-      CHEM3D1Format
-      CHEM3D2Format
-      ChemDrawBinaryFormat
-      ChemDrawFormat
-      ChemKinFormat
-      CHTFormat
-      CIFFormat
-      CopyFormat
-      CRK2DFormat
-      CRK3DFormat
-      CSRFormat
-      CSSRFormat
-      DlpolyConfigFormat
-      DlpolyHISTORYFormat
-      DMolFormat
-      XXXFormat
-      FASTAFormat
-      FastSearchFormat
-      FCHKFormat
-      FEATFormat
-      FenskeZmatFormat
-      FHIainsFormat
-      FingerprintFormat
-      FreeFormFractionalFormat
-      GAMESSOutputFormat
-      GAMESSInputFormat
-      GAMESSUKFormat
-      GAMESSUKInputFormat
-      GAMESSUKOutputFormat
-      OBGaussianCubeFormat
-      GaussianOutputFormat
-      GaussianInputFormat
-      GaussianZMatrixInputFormat
-      GenBankFormat
-      GhemicalFormat
-      GROMOS96Format
-      GULPFormat
-      HINFormat
-      JaguarOutputFormat
-      JaguarInputFormat
-      MCDLFormat
-      MDLFormat
-      MOLFormat
-      SDFFormat
-      mmCIFFormat
-      MacroModFormat
-      MNAFormat
-      MOL2Format
-      OBMoldenFormat
-      MolproOutputFormat
-      MolproInputFormat
-      MolReportFormat
-      MOPACFormat
-      MOPACCARTFormat
-      MOPACINTFormat
-      MPDFormat
-      MPQCFormat
-      MPQCInputFormat
-      MSIFormat
-      OBMSMSFormat
-      NulFormat
-      NWChemOutputFormat
-      NWChemInputFormat
-      OBOpenDXCubeFormat
-      OutputFormat
-      PCModelFormat
-      PDBFormat
-      PDBQTFormat
-      PNGFormat
-      PovrayFormat
-      PQRFormat
-      PQSFormat
-      PWscfFormat
-      QChemOutputFormat
-      QChemInputFormat
-      ReportFormat
-      SmiReactFormat
-      RXNFormat
-      ShelXFormat
-      SMIFormat
-      CANSMIFormat
-      FIXFormat
-      SVGFormat
-      TextFormat
-      ThermoFormat
-      TinkerFormat
-      TitleFormat
-      TurbomoleFormat
-      UniChemFormat
-      VASPFormat
-      ViewMolFormat
-      XEDFormat
-      XTCFormat
-      XYZFormat
-      YOBFormat
-      ZINDOFormat
-      # XML formats
-      ChemDrawXMLFormat
-      CMLFormat
-      CMLReactFormat
-      PubChemFormat
-      XMLFormat
-      # InChI format
-      InChIFormat
-     )
-
-  set(descriptor_classes
-      CanSmiles
-      CompoundFilter
-      MWFilter
-      SmartsFilter
-      TitleFilter
-      FormulaDescriptor
-      FPCount
-      InChIFilter
-      SmartsDescriptor
-     )
-
-  set(fingerprint_classes
-      fingerprint2
-      PatternFP
-     )
-
-  set(forcefield_classes
-      OBForceFieldGaff
-      OBForceFieldGhemical
-      OBForceFieldMMFF94
-      OBForceFieldUFF
-     )
-
-  set(op_classes
-      OpAddInIndex
-      OpAddPolarH
-      OpCanonical
-      OpConformer
-      OpFillUC
-      OpEnergy
-      OpMinimize
-      OpGen2D
-      OpGen3D
-      Op2D
-      OpNewS
-      OpPartialCharge
-      OpReadConformers
-      OpSort
-      OpUnique
-      OpExtraOut
-     )
-
-  set(charge_classes
-      GasteigerCharges
-      MMFF94Charges
-      QEqCharges
-      QTPIECharges
-     )
 
   # Set libs to imported openbabel target
   set(libs openbabel ${LIBXML2_LIBRARIES} inchi)
 
-  if(MSVC)
-    #
-    # Microsoft Visual C++ compiler
-    #
-  else(MSVC)
-    #
-    # GNU GCC or Intel ICC compiler.
-    #
-    # NOTE: not tested for icc but the options and name mangling should be the same.
-    foreach(plugin_classes ${format_classes} ${descriptor_classes} ${fingerprint_classes} ${forcefield_classes} ${op_classes} ${charge_classes})
-      foreach(plugin_class ${plugin_classes})
-        # Perform simple name mangling for symbol
-        string(LENGTH ${plugin_class} length)
-        set(plugin_symbols_link_flags "${plugin_symbols_link_flags} -u _ZTVN9OpenBabel${length}${plugin_class}E")
-      endforeach(plugin_class ${plugin_classes})
-    endforeach(plugin_classes ${format_classes} ${descriptor_classes} ${fingerprint_classes} ${forcefield_classes} ${op_classes} ${charge_classes})
-    set(CMAKE_CXX_FLAGS "${plugin_symbols_link_flags} ${CMAKE_CXX_FLAGS}")
-
+  if(NOT MSVC)
     find_package(Threads)
     if(CMAKE_USE_PTHREADS_INIT)
       if(BUILD_MIXED)
@@ -315,7 +112,7 @@ else(BUILD_SHARED)
       #
       set(CMAKE_CXX_FLAGS "-static ${CMAKE_CXX_FLAGS}")
     endif(BUILD_MIXED)
-  endif(MSVC)
+  endif()
 
   # build a static babel only
   add_executable(babel babel.cpp)
