--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -1376,7 +1376,16 @@ INCLUDE_FILE_PATTERNS  =
 # instead of the = operator.
 
 PREDEFINED             = OBAPI:= \
-                         EXTERN:=
+                         OBCOMMON:= \
+                         OBCONV:= \
+                         OBDEPICT:= \
+                         OBERROR:= \
+                         OBFPRT:= \
+                         OBFPTR:= \
+                         OBMCDL:= \
+                         DOXYGEN_SHOULD_SKIP_THIS \
+                         EXTERN:= \
+                         "UNUSED(x)=x"
 
 # If the MACRO_EXPANSION and EXPAND_ONLY_PREDEF tags are set to YES then
 # this tag can be used to specify a list of macro names that should be expanded.
