--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -626,6 +626,8 @@ EXCLUDE                = include/openbabel/babelconfig.h \
                          src/config.h \
                          src/zipstreamimpl.h \
                          src/zipstream.h \
+                         src/snprintf.h \
+                         src/snprintf.c \
                          src/all.h \
                          src/depict/svgpainter.cpp \
                          src/RDKitConv.cpp
