--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -41,8 +41,14 @@ endif (EIGEN2_FOUND)
 set(TEST_PATH ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
 
 if(NOT BUILD_SHARED)
-  set(libs openbabel ${LIBXML2_LIBRARIES} inchi)
-  if (NOT APPLE)
+  set(libs openbabel)
+  if(WITH_STATIC_LIBXML)
+    set(libs ${libs} ${LIBXML2_LIBRARIES})
+  endif()
+  if(WITH_STATIC_INCHI)
+    set(libs ${libs} inchi)
+  endif()
+  if (NOT APPLE AND NOT MSVC)
     set(CMAKE_CXX_FLAGS "-static ${CMAKE_CXX_FLAGS}")
   endif()
 else()
@@ -97,9 +103,16 @@ set(old_tests
     smilesmatch
     unitcell
    )
-if(LIBXML2_FOUND)
-  set(oldtests ${oldtests} cmlreadfile)
-endif(LIBXML2_FOUND)
+if(BUILD_SHARED)
+  if(LIBXML2_FOUND)
+    set(oldtests ${oldtests} cmlreadfile)
+  endif(LIBXML2_FOUND)
+else()
+  if(WITH_STATIC_LIBXML)
+    set(oldtests ${oldtests} cmlreadfile)
+  endif()
+  set(WITH_INCHI ${WITH_STATIC_INCHI})
+endif()
 
 if(WITH_INCHI)
   add_executable(test_inchiwrite inchiwrite.cpp ../src/formats/getinchi.cpp)
