--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -70,7 +70,13 @@ else(BUILD_SHARED)
 ###############################################################################
 
   # Set libs to imported openbabel target
-  set(libs openbabel ${LIBXML2_LIBRARIES} inchi)
+  set(libs openbabel)
+  if(WITH_STATIC_INCHI)
+    set(libs ${libs} ${LIBXML2_LIBRARIES})
+  endif()
+  if(WITH_STATIC_LIBXML)
+    set(libs ${libs} inchi)
+  endif()
 
   if(NOT MSVC)
     find_package(Threads)
