test/testbindings.py, test/CMakeLists.txt, cmake/modules/UsePythonTest.cmake: 	Ensure that the environment variables LD_LIBRARY_PATH, BABEL_*DIR are 	set by CMake before running the Python binding tests. This involved 	editing	the UsePythonTest CMake module to allow these values to be 	passed. I also made sure that these tests can run directly. 	TODO: Sort this all out on Windows.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4312 71e0b675-c112-0410-beda-96664073b5c2

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -194,11 +194,14 @@ if (PYTHON_BINDINGS)
   set(pybindtests
       bindings _pybel example)
   foreach(pybindtest ${pybindtests})
+    SET_SOURCE_FILES_PROPERTIES(test${pybindtest}.py PROPERTIES
+        PYTHONPATH "${CMAKE_BINARY_DIR}/scripts/pybuild:${CMAKE_BINARY_DIR}/lib"
+        BABEL_LIBDIR "${CMAKE_BINARY_DIR}/lib"
+        BABEL_DATADIR "${CMAKE_SOURCE_DIR}/data"
+)
     ADD_PYTHON_TEST(pybindtest_${pybindtest} test${pybindtest}.py)
     set_tests_properties(pybindtest_${pybindtest} PROPERTIES
          FAIL_REGULAR_EXPRESSION "ERROR;FAIL;Test failed"
-         ENVIRONMENT "BABEL_LIBDIR=${CMAKE_BINARY_DIR}/lib"
-         ENVIRONMENT "BABEL_DATADIR=${CMAKE_SOURCE_DIR}/data"
     )
   endforeach(pybindtest ${pybindtests})
 endif (PYTHON_BINDINGS)
