Update the variables for the Python tests too
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4313 71e0b675-c112-0410-beda-96664073b5c2

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -176,11 +176,13 @@ if(NOT MINGW AND NOT CYGWIN)
     set(pytests
         babel sym fastsearch unique kekule)
     foreach(pytest ${pytests})
+    SET_SOURCE_FILES_PROPERTIES(test${pytest}.py PROPERTIES
+        BABEL_LIBDIR "${CMAKE_BINARY_DIR}/lib"
+        BABEL_DATADIR "${CMAKE_SOURCE_DIR}/data"
+)
       ADD_PYTHON_TEST(pytest_${pytest} test${pytest}.py)
       set_tests_properties(pytest_${pytest} PROPERTIES
            FAIL_REGULAR_EXPRESSION "ERROR;FAIL;Test failed"
-           ENVIRONMENT "BABEL_LIBDIR=${CMAKE_BINARY_DIR}/lib"
-           ENVIRONMENT "BABEL_DATADIR=${CMAKE_SOURCE_DIR}/data"
       )
     endforeach(pytest ${pytests})
   endif(PYTHON_EXECUTABLE)
