Corrected time to match that of the dashboard.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4316 71e0b675-c112-0410-beda-96664073b5c2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -459,7 +459,7 @@ configure_file("${openbabel_SOURCE_DIR}/OpenBabel2ConfigVersion.cmake.in"
   "${openbabel_BINARY_DIR}/OpenBabel2ConfigVersion.cmake" @ONLY)
 
 # Now to configure the installed config file.
-set(OB_CONFIG_DIR "${LIB_INSTALL_DIR}/openbabel")
+set(OB_CONFIG_DIR "${LIB_INSTALL_DIR}/cmake")
 set(OpenBabel2_INCLUDE_DIRS "\${OpenBabel2_INSTALL_PREFIX}/${OB_INCLUDE_DIRS}")
 set(OB_EXPORTS_FILE
   "\${OpenBabel2_INSTALL_PREFIX}/${OB_CONFIG_DIR}/OpenBabel2_EXPORTS.cmake")
