Fixes and test files for Steffen Neumann's PR#3107834 and PR#3116415 and his email to openbabel-devel entitled "58 failures among 28 Mio conversions smi -> inchi".
data/atomtyp.txt: 5-coordinate Sb and As were typed as sp3
src/stereo/perception.cpp: Check that a potential cis/trans bond does not involve an atom with more than 3 neighbours.
test/*: Include a reduced version of Steffen's test cases. Minor mod to file names to enable .smi files as well as .sdf in test cases.

git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4321 71e0b675-c112-0410-beda-96664073b5c2

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -121,11 +121,11 @@ if(WITH_INCHI)
     set_target_properties(test_inchiwrite PROPERTIES LINK_SEARCH_END_STATIC TRUE)
   endif()
   # files in test/inchi -- both .sdf and .txt
-  set(inchitests Samples SamplesTechMan)
+  set(inchitests Samples.sdf SamplesTechMan.sdf Steffen_PubChem.smi)
   set(inchidata ${CMAKE_SOURCE_DIR}/test/inchi)
   foreach(test ${inchitests})
     add_test(inchi${test}_Test
-             ${TEST_PATH}/test_inchiwrite ${inchidata}/${test}.sdf ${inchidata}/${test}.txt)
+             ${TEST_PATH}/test_inchiwrite ${inchidata}/${test} ${inchidata}/${test}.txt)
     set_tests_properties(inchi${test}_Test PROPERTIES
                          FAIL_REGULAR_EXPRESSION "Not ok"
                          ENVIRONMENT "BABEL_LIBDIR=${CMAKE_BINARY_DIR}/lib"
