scripts/CMakeLists.txt: Change DLL back to openbabel_csharp.dll scripts/openbabel-csharp.i: Change DLL back to openbabel_csharp.dll, and get rid of warnings. windows-vc2008/Distribution/OBDotNetAssemblyInfo.cs: Bump version number to 0.4.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4330 71e0b675-c112-0410-beda-96664073b5c2

--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -347,7 +347,7 @@ if (DO_CSHARP_BINDINGS)
     add_library(bindings_csharp MODULE ${openbabel_SOURCE_DIR}/scripts/csharp/openbabel-csharp.cpp)
     target_link_libraries(bindings_csharp ${BABEL_LIBRARY})
     set_target_properties(bindings_csharp PROPERTIES
-        OUTPUT_NAME openbabelcsharp )
+        OUTPUT_NAME openbabel_csharp )
 
 endif (DO_CSHARP_BINDINGS)
 
