Patches from Fedora packaging.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4341 71e0b675-c112-0410-beda-96664073b5c2

--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -4,7 +4,9 @@ file(GLOB math_headers      openbabel/math/*.h)
 file(GLOB stereo_headers      openbabel/stereo/*.h)
 file(GLOB depict_headers      openbabel/stereo/*.h)
 
+if(NOT OPENBABEL_USE_SYSTEM_INCHI)
 install(FILES inchi_api.h          DESTINATION include/inchi)
+endif(NOT OPENBABEL_USE_SYSTEM_INCHI)
 install(FILES chemdrawcdx.h        DESTINATION ${OB_INCLUDE_DIRS}/openbabel)
 install(FILES ${openbabel_headers} DESTINATION ${OB_INCLUDE_DIRS}/openbabel)
 install(FILES ${math_headers}      DESTINATION ${OB_INCLUDE_DIRS}/openbabel/math)
